--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "khepri-ast",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "Khepri AST Nodes",
-  "main": "",
   "repository": {
     "type": "git",
     "url": "git@github.com:mattbierner/khepri-ast.git"
   },
   "keywords": [
-    'khepri'
+    "khepri",
+    "ast"
   ],
+  
+  "main": "index.js",
+  
   "author": "Matt Bierner",
   "license": "MIT"
 }
